{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 305,
  "lineage": "6f44769c-0782-7b02-03c2-70287819d195",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jikankanriEip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bfa8b63a64313b98",
            "domain": "vpc",
            "id": "eipalloc-0e021c70d93938ed2",
            "instance": "i-0045d9259aa7ca8e2",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0bda78f284f43bc5b",
            "private_dns": "ip-192-168-1-236.ap-northeast-1.compute.internal",
            "private_ip": "192.168.1.236",
            "public_dns": "ec2-54-168-211-206.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.168.211.206",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jikankanriEc2",
            "aws_key_pair.cliUserEc2",
            "aws_security_group.jikankanriSg",
            "aws_subnet.jikankanriApp1a",
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jikankanriEc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f27d081df46f326c",
            "arn": "arn:aws:ec2:ap-northeast-1:457197202158:instance/i-0045d9259aa7ca8e2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0045d9259aa7ca8e2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cli-user-ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bda78f284f43bc5b",
            "private_dns": "ip-192-168-1-236.ap-northeast-1.compute.internal",
            "private_ip": "192.168.1.236",
            "public_dns": "ec2-54-168-211-206.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.168.211.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c3b92bc247431dbe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0431d27ba1a439cbf",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053cbe16bbfb3efca"
            ]
          },
          "dependencies": [
            "aws_key_pair.cliUserEc2",
            "aws_security_group.jikankanriSg",
            "aws_subnet.jikankanriApp1a",
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jikankanriIg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:457197202158:internet-gateway/igw-07c79f30790847720",
            "id": "igw-07c79f30790847720",
            "owner_id": "457197202158",
            "vpc_id": "vpc-028cbf4603d29c068"
          },
          "dependencies": [
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "myAlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "jikokanri-logs",
                "enabled": true,
                "prefix": "elb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:457197202158:loadbalancer/app/jikokanriAlb/689d201a6fbbd46b",
            "arn_suffix": "app/jikokanriAlb/689d201a6fbbd46b",
            "dns_name": "jikokanriAlb-1029589099.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:457197202158:loadbalancer/app/jikokanriAlb/689d201a6fbbd46b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jikokanriAlb",
            "security_groups": [
              "sg-01b6d63ae109245dd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-031f2d2f339c0d02a"
              },
              {
                "subnet_id": "subnet-0431d27ba1a439cbf"
              }
            ],
            "subnets": [
              "subnet-031f2d2f339c0d02a",
              "subnet-0431d27ba1a439cbf"
            ],
            "tags": {
              "Name": "jikokanri-terraform-elb"
            },
            "vpc_id": "vpc-028cbf4603d29c068",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_s3_bucket.jikokanriLogs",
            "aws_security_group.jikankanriElbSg",
            "aws_subnet.jikankanriApp1a",
            "aws_subnet.jikankanriApp1c",
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "myAlbListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:457197202158:listener/app/jikokanriAlb/689d201a6fbbd46b/9d3af1d53b9a4cea",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:457197202158:certificate/c17ebcfa-c8b3-4c2d-8d6f-7b39518a9bc1",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:457197202158:targetgroup/tf-jikokanri-alb-tg/03cc5f1fc8a7a0ec",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:457197202158:listener/app/jikokanriAlb/689d201a6fbbd46b/9d3af1d53b9a4cea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:457197202158:loadbalancer/app/jikokanriAlb/689d201a6fbbd46b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.elbAcm",
            "aws_acm_certificate_validation.elbAcmValid",
            "aws_lb.myAlb",
            "aws_lb_target_group.myAlbTg",
            "aws_route53_record.elbAcmSite",
            "aws_route53_zone.root",
            "aws_s3_bucket.jikokanriLogs",
            "aws_security_group.jikankanriElbSg",
            "aws_subnet.jikankanriApp1a",
            "aws_subnet.jikankanriApp1c",
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "myAlbTg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:457197202158:targetgroup/tf-jikokanri-alb-tg/03cc5f1fc8a7a0ec",
            "arn_suffix": "targetgroup/tf-jikokanri-alb-tg/03cc5f1fc8a7a0ec",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:457197202158:targetgroup/tf-jikokanri-alb-tg/03cc5f1fc8a7a0ec",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-jikokanri-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-028cbf4603d29c068"
          },
          "dependencies": [
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "myAlbTgAttach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:457197202158:targetgroup/tf-jikokanri-alb-tg/03cc5f1fc8a7a0ec-20210401231531549100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:457197202158:targetgroup/tf-jikokanri-alb-tg/03cc5f1fc8a7a0ec",
            "target_id": "i-0045d9259aa7ca8e2"
          },
          "dependencies": [
            "aws_instance.jikankanriEc2",
            "aws_key_pair.cliUserEc2",
            "aws_lb_target_group.myAlbTg",
            "aws_security_group.jikankanriSg",
            "aws_subnet.jikankanriApp1a",
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jikankanriTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c752f767746b0437",
            "owner_id": "457197202158",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c79f30790847720",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-028cbf4603d29c068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jikankanriIg",
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jikankanriTableAsso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015e71aab367a02c0",
            "route_table_id": "rtb-0c752f767746b0437",
            "subnet_id": "subnet-0431d27ba1a439cbf"
          },
          "dependencies": [
            "aws_internet_gateway.jikankanriIg",
            "aws_route_table.jikankanriTable",
            "aws_subnet.jikankanriApp1a",
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jikankanriElbSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:457197202158:security-group/sg-01b6d63ae109245dd",
            "description": "jikankanri_security_group_elb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b6d63ae109245dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "jikankanri_security_group_elb",
            "name_prefix": "",
            "owner_id": "457197202158",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-028cbf4603d29c068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jikankanriRdsSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:457197202158:security-group/sg-0a00625eeb692854e",
            "description": "jikankanri_rds_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a00625eeb692854e",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "jikankanri_rds_security_group",
            "name_prefix": "",
            "owner_id": "457197202158",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-028cbf4603d29c068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jikankanriSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:457197202158:security-group/sg-053cbe16bbfb3efca",
            "description": "jikankanri_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053cbe16bbfb3efca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "147.192.123.0/24",
                  "133.106.130.0/24",
                  "14.15.19.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jikankanri_security_group",
            "name_prefix": "",
            "owner_id": "457197202158",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-028cbf4603d29c068"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jikankanriApp1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:457197202158:subnet/subnet-0431d27ba1a439cbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0431d27ba1a439cbf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "457197202158",
            "vpc_id": "vpc-028cbf4603d29c068"
          },
          "dependencies": [
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jikankanriApp1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:457197202158:subnet/subnet-031f2d2f339c0d02a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-031f2d2f339c0d02a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "457197202158",
            "vpc_id": "vpc-028cbf4603d29c068"
          },
          "dependencies": [
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jikankanriDb1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:457197202158:subnet/subnet-06417c30d114955a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-06417c30d114955a0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "457197202158",
            "vpc_id": "vpc-028cbf4603d29c068"
          },
          "dependencies": [
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jikankanriDb1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:457197202158:subnet/subnet-0bf39bda476f42d87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0bf39bda476f42d87",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "457197202158",
            "vpc_id": "vpc-028cbf4603d29c068"
          },
          "dependencies": [
            "aws_vpc.jikankanriVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jikankanriVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:457197202158:vpc/vpc-028cbf4603d29c068",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-015a4d01b3022f16d",
            "default_route_table_id": "rtb-0b074068e4da63ad7",
            "default_security_group_id": "sg-0c4a739cb275e157d",
            "dhcp_options_id": "dopt-960415f1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-028cbf4603d29c068",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b074068e4da63ad7",
            "owner_id": "457197202158",
            "tags": {
              "Name": "jikankanri-vpc"
            }
          }
        }
      ]
    }
  ]
}